--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,11 @@ body{
     background-position: center;
     color: #fff;
 }
-
+footer{
+    i{
+        padding: 3px;
+    }
+}
 /* index.html */
 .content{
     display: flex;
@@ -198,6 +202,27 @@ input[type=submit]:hover {
     display: flex;
     justify-content:flex-end;
     padding-right: 100px;
+}
+/* media querys */
+@media only screen and (max-width: 600px) {
+    h1.wonderOutNow{
+        display: flex-end;
+        justify-content: center;
+        align-items: center;
+        margin-left: 8rem;
+    }
+    .gridPhotoSeven, .gridPhotoSix, .gridPhotoFive, .gridPhotoFour{
+        display: none;
+    }
+    .mercyVideo, .inMyBloodVideo{
+        display: none;
+    }
+    .musicVideos, .images{
+        margin-left: -100px;
+    }
+    .thankYou h1{
+        margin-left: 1rem;
+    }
 }
 
 /* Error 404 not found */
